syntax = "proto3";
package models;

import "gitlab.com/alphaticks/xchanger/models/protos.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Security {
    uint64 securityID = 1;
    string securityType = 2;
    models.Exchange exchange = 3;
    string symbol = 4;
    double min_price_increment = 5;
    double round_lot = 6;
    models.Asset underlying = 7;
    models.Asset quote_currency = 8;
    bool enabled = 9;
    bool is_inverse = 10;
    google.protobuf.DoubleValue maker_fee = 11;
    google.protobuf.DoubleValue taker_fee = 12;
    google.protobuf.DoubleValue multiplier = 13;
    google.protobuf.Timestamp maturity_date = 14;
}
